--- a/css/style.less
+++ b/css/style.less
@@ -26,7 +26,6 @@
 	font-style: italic;
 }
 
-
 // Общее
 @col-3: ~"(min-width: 535px)";
 @col-4: ~"(min-width: 711px)";
@@ -411,6 +410,7 @@
 
 					.form__element__label {
 						&__fake-checkbox {
+							background: #fff;
 							border: 1px solid #000;
 							transition: border .35s ease-out;
 						}
@@ -421,6 +421,11 @@
 								transition: none;
 							}
 						}
+					}
+
+					.form__element__label__checkbox:checked + .form__element__label__fake-checkbox::before {
+						top: -5px;
+						left: 2.5px;
 					}
 				}
 
@@ -1057,15 +1062,18 @@
 				vertical-align: middle;
 				margin-top: -2px;
 				margin-right: 3px;
+				position: relative;
 			}
 
 			&__checkbox:checked + &__fake-checkbox::before {
 				display: block;
-				content: "✓";
-				font-family: Georgia, 'Times New Roman' !important;
-				font-size: 2rem;
-				color: #000;
-				margin-top: -15px;
+				position: absolute;
+				top: -4px;
+				left: 4px;
+				width: 20px;
+				height: 21px;
+				content: '';
+				background: url('../img/tick.svg');
 			}
 		}
 
@@ -1137,6 +1145,25 @@
 		margin-top: -.75rem;
 	}
 }
+
+.likely {
+	&_mobile {
+		display: inline-block !important;
+
+		@media @col-3 {
+			display: none !important;
+		}
+	}
+
+	&_desktop {
+		display: none !important;
+
+		@media @col-3 {
+			display: inline-block !important;
+		}
+	}
+}
+
 
 @keyframes showFooter {
 	from {bottom: -217px;}
