Bigger social buttons

--- a/css/style.less
+++ b/css/style.less
@@ -1219,6 +1219,20 @@
 	&_mobile {
 		display: inline-block !important;
 
+		.likely__widget {
+			height: 3rem !important;
+		}
+
+		.likely__icon {
+			width: 3.025rem !important;
+			height: 3rem !important;
+
+			svg {
+				width: 2.6rem !important;
+				height: 2.5rem !important;
+			}
+		}
+
 		@media @col-3 {
 			display: none !important;
 		}
