No month book cover on mobile

--- a/css/style.less
+++ b/css/style.less
@@ -925,9 +925,11 @@
 			}
 
 			&__wrap {
+				display: none;
 				margin-top: 0;
 
 				@media @col-3 {
+					display: block;
 					margin: 0 24px 0 -57px;
 				}
 
