No right padding in input

--- a/css/style.less
+++ b/css/style.less
@@ -1068,7 +1068,7 @@
 			background: @input-background-color;
 			border: none;
 			.border-radius(@input-border-radius);
-			padding: 10px;
+			padding: 10px 0 10px 10px;
 			font-size: @form-font-size;
 
 			&_invalid {
