Instant plus hovering, citt editrice, meta, realtime author typograph, bigger button

--- a/css/style.less
+++ b/css/style.less
@@ -344,7 +344,9 @@
 					}
 
 					&:hover {
-						transition: none;
+						.grid__item_link-to-book-adding__link__icon__gradient-color {
+							transition: none;
+						}
 
 						.grid__item_link-to-book-adding__link__icon__gradient-color_1 {
 							stop-color: #85dc54;
@@ -1193,9 +1195,9 @@
 			cursor: pointer;
 			border: none;
 			.border-radius(@input-border-radius);
-			font-size: @form-font-size;
-			margin-top: .85rem;
-			padding: 10px 30px;
+			font-size: 22px;
+			margin-top: 13px;
+			padding: 10px 45px 15px;
 			background: #6FFC3E;
 			background: linear-gradient(to bottom, #6FFC3E 0%, #1E6B07 100%);
 			color: #fff;
