Fix of title cutting when author is on more one line

--- a/css/style.less
+++ b/css/style.less
@@ -366,6 +366,16 @@
 					max-height: 204px;
 				}
 
+				&_author-lines {
+					&_two {
+						max-height: 202px;
+					}
+
+					&_three {
+						max-height: 192px;
+					}
+				}
+
 				&__author {
 					font-family: 'IBM Plex Serif Italic';
 					font-style: italic;
