--- a/css/style.less
+++ b/css/style.less
@@ -223,49 +223,64 @@
 				background: #fffbf3;
 			}
 
-			&_link-to-book-adding {
-				font-family: 'IBM Plex Serif';
+			&_center {
+				@media @col-3 {
+					grid-column-start: 1;
+					grid-column-end: 4;
+					margin: auto;
+				}
+
+				@media @col-4 {
+					grid-column-start: 2;
+					grid-column-end: 4;
+				}
+
+				@media @col-5 {
+					grid-column-start: 3;
+					grid-column-end: 4;
+				}
+
+				@media @col-6 {
+					grid-column-start: 3;
+					grid-column-end: 5;
+				}
+
+				@media @col-7 {
+					grid-column-start: 4;
+					grid-column-end: 5;
+				}
+			}
+
+			&_place {
 				background: none;
+				padding: 0;
+				box-shadow: none !important;
+				height: 160px;
+
+				@media @col-3 {
+					height: 465px;
+				}
+
+				&__cone {
+					position: absolute;
+					top: calc(50% - 75px);
+					left: calc(50% - 72.5px);
+					width: 150px;
+					height: 150px;
+				}
+			}
+
+			&_link-to-book-adding {
+				font-family: 'IBM Plex Serif', sans-serif;
 				text-align: center;
 				font-size: 3.6rem;
 				height: 53px;
 				margin: auto;
-				padding: 0;
-				box-shadow: none !important;
 
 				@media @col-3 {
 					font-size: 10rem;
-					margin: 0;
 					padding: 0.5rem;
 					height: 465px;
-				}
-
-				&_center {
-					@media @col-3 {
-						grid-column-start: 1;
-						grid-column-end: 4;
-						margin: auto;
-					}
-
-					@media @col-4 {
-						grid-column-start: 2;
-						grid-column-end: 4;
-					}
-
-					@media @col-5 {
-						grid-column-start: 3;
-						grid-column-end: 4;
-					}
-
-					@media @col-6 {
-						grid-column-start: 3;
-						grid-column-end: 5;
-					}
-
-					@media @col-7 {
-						grid-column-start: 4;
-						grid-column-end: 5;
-					}
 				}
 
 				&__link {
@@ -385,7 +400,7 @@
 				}
 
 				&__author {
-					font-family: 'IBM Plex Serif Italic';
+					font-family: 'IBM Plex Serif Italic', sans-serif;;
 					font-style: italic;
 					font-size: 22px;
 					margin-bottom: 7px;
@@ -396,7 +411,7 @@
 				}
 
 				&__title {
-					font-family: 'IBM Plex Serif';
+					font-family: 'IBM Plex Serif', sans-serif;
 					font-size: 33px;
 					-webkit-hyphens: auto;
 					-ms-hyphens: auto;
@@ -409,7 +424,7 @@
 			}
 
 			&__publishing {
-				font-family: 'IBM Plex Serif';
+				font-family: 'IBM Plex Serif', sans-serif;
 				font-size: 1.4rem;
 
 				@media @col-3 {
