--- a/css/style.less
+++ b/css/style.less
@@ -118,8 +118,9 @@
 		margin-bottom: 15px;
 
 		&__icon {
-			width: 1.9rem;
-			height: 1.9rem;
+			width: 30px;
+			height: 30px;
+			margin-top: -3px;
 		}
 
 		&__form {
