Labels and textarea copy fix when -\n or \n

--- a/css/style.less
+++ b/css/style.less
@@ -1348,6 +1348,19 @@
 	}
 }
 
+.copy-fix {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	width: 1px;
+	height: 1px;
+	opacity: 0;
+	margin: -2.5px;
+	padding: 0;
+	border: none;
+	outline: none;
+}
+
 .likely {
 	&_mobile {
 		display: inline-block !important;
