--- a/css/style.less
+++ b/css/style.less
@@ -284,13 +284,79 @@
 			}
 
 			&_link-to-book-adding {
-				text-align: center;
+				width: 100%;
 				height: 53px;
+				text-align: center;
 
 				@media @col-3 {
 					padding: 8px;
 					height: 465px;
 					border: 1px solid green;
+				}
+
+				&_position {
+					grid-row: 1;
+
+					@media @col-3 {
+						grid-column-start: 3;
+						grid-column-end: 4;
+					}
+
+					@media @col-4 {
+						grid-row: 3;
+						grid-column-start: 4;
+						grid-column-end: 5;
+					}
+
+					@media @col-5 {
+						grid-row: 1;
+						grid-column-start: 2;
+						grid-column-end: 3;
+					}
+
+					@media @col-5 {
+						grid-column-start: 3;
+						grid-column-end: 4;
+					}
+
+					@media @col-6 {
+						grid-column-start: 4;
+						grid-column-end: 5;
+					}
+
+					@media @col-7 {
+						grid-column-start: 5;
+						grid-column-end: 6;
+					}
+
+					&_in-the-end {
+						grid-row: 1;
+
+						@media @col-3 {
+							grid-column-start: 3;
+							grid-column-end: 4;
+						}
+
+						@media @col-4 {
+							grid-column-start: 4;
+							grid-column-end: 5;
+						}
+
+						@media @col-5 {
+							grid-column-start: 5;
+							grid-column-end: 6;
+						}
+
+						@media @col-6 {
+							grid-column-start: 6;
+							grid-column-end: 7;
+						}
+
+						@media @col-7 {
+							grid-column-start: 7;
+							grid-column-end: 8;
+						}
+					}
 				}
 
 				&__link {
@@ -623,8 +689,8 @@
 				margin-top: -5px;
 				font-size: 19px;
 				grid-row: 2;
-				grid-column-start: 1;
-				grid-column-end: 3;
+				grid-column-start: 2;
+				grid-column-end: 4;
 			}
 
 			@media @col-4 {
