Events on mobile

--- a/css/style.less
+++ b/css/style.less
@@ -748,6 +748,7 @@
 					border: none;
 					font-family: 'IBM Plex Sans', sans-serif;
 					font-size: 28px;
+					overflow: hidden;
 
 					@media @col-3 {
 						font-size: 19px;
