--- a/css/style.less
+++ b/css/style.less
@@ -721,6 +721,12 @@
 			overflow: hidden;
 			max-height: 468px;
 
+			@media @before-col-3 {
+				margin-bottom: -16.5px;
+				padding-top: 15.5px;
+				border-top: 1px solid;
+			}
+
 			@media @col-3 {
 				margin-top: -5px;
 				font-size: 19px;
