--- a/css/style.less
+++ b/css/style.less
@@ -770,7 +770,7 @@
 					width: 100%;
 					height: 100%;
 					padding: 0;
-					resize: none;
+					resize: none !important;
 					outline: none;
 					-moz-appearance: none;
 					border: none;
