Right placeholder color in Firefox

--- a/css/style.less
+++ b/css/style.less
@@ -154,6 +154,23 @@
 				&::-webkit-input-placeholder {
 					color: #000;
 				}
+
+				&::-moz-placeholder {
+					color: #000;
+					opacity: 1;
+				}
+
+				&:-ms-input-placeholder { /* Internet Explorer 10-11 */
+					color: #000;
+				}
+
+				&::-ms-input-placeholder { /* Edge */
+					color: #000;
+				}
+
+				&::placeholder {
+					color: #000;
+				}
 			}
 		}
 	}
