--- a/css/style.less
+++ b/css/style.less
@@ -139,6 +139,17 @@
 			width: 30px;
 			height: 50px;
 			margin-top: -3px;
+
+			&__svg {
+				enable-background:new 0 0 27.9 50;
+				
+				&__circle {
+					fill: none;
+					stroke: #000000;
+					stroke-width: 3;
+					stroke-miterlimit:10;
+				}
+			}
 		}
 
 		&__form {
