Make better font on Apple Macs

--- a/css/style.less
+++ b/css/style.less
@@ -67,6 +67,9 @@
 	margin: 15px auto 47px;
 	width: 290px;
 
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+
 	@media @col-3 {
 		width: 505px;
 	}
